--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
+    <!--de 155 a 160 caracteres-->
+    <meta name="description"
+        content="Descubre las recetas de Margarita, con las que podrás deleitar a todos tus invitados a la hora de almuerzo, comida o a la hora del té.">
+    <meta name="keywords" content="COCINA, RECETAS, ESTILO DE VIDA, MARGARITA NEELY, POSTRES">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/estilos.css">
     <title>Cocina de Margarita</title>
@@ -42,7 +46,8 @@
                         <a href="pages/Recetas Saladas/pasteldechoclo.html"> Pastel de choclo</a>
                     </h3>
                     <img src="imagenes.html/pasteldechoclo4.jpg" alt="pasteldechoclo.jpg" class="img-index">
-                    <p>El pastel de choclo es una delicia de la cocina tradicional Chilena. Imposible no deleitar a todos en un almuerzo dominguero con este recetón!</p>
+                    <p>El pastel de choclo es una delicia de la cocina tradicional Chilena. Imposible no deleitar a
+                        todos en un almuerzo dominguero con este recetón!</p>
                     <a href="pages/Recetas Saladas/pasteldechoclo.html" class="botonreceta">Ver</a>
                 </div>
 
@@ -51,14 +56,16 @@
                         <a href="pages/Recetas dulces/quequemarmol.html"> Queque Marmol</a>
                     </h3>
                     <img src="imagenes.html/quequemarmol3.jpg" alt="quequemarmol.jpg" class="img-index">
-                    <p>Este queque mármol que literalmente se deshace en la boca, es una receta de mi abuela paterna. Con notas de chocolate y vainilla, es el infaltable de la hora del té.</p>
+                    <p>Este queque mármol que literalmente se deshace en la boca, es una receta de mi abuela paterna.
+                        Con notas de chocolate y vainilla, es el infaltable de la hora del té.</p>
                     <a href="pages/Recetas dulces/quequemarmol.html" class="botonreceta">Ver</a>
                 </div>
 
                 <div class="recetainicio">
                     <h3><a href="pages/Recetas Saladas/padthai.html">Pad Thai</a></h3>
                     <img src="imagenes.html/padthaigaleri.jpg" class="img-index"><br>
-                    <p>El delicioso pad-thai que les dejo aquí es una adaptación de Margarita de este famoso plato Tailandés. Háganlo, no se arepentirán!</p>
+                    <p>El delicioso pad-thai que les dejo aquí es una adaptación de Margarita de este famoso plato
+                        Tailandés. Háganlo, no se arepentirán!</p>
                     <a href="pages/Recetas Saladas/padthai.html" class="botonreceta">Ver</a>
                 </div>
             </div>
@@ -77,7 +84,9 @@
 
 
                     <div class="contenido_inspoinicio_col">
-                        <p>En este blog "Pinch of Yum" escrito por Lindsay, además de encontrar recetas novedosas y exquisitas, puedes encontrar datos de viajes, estilo de vida, casa, naternindad, mascotas y mucho más!</p>
+                        <p>En este blog "Pinch of Yum" escrito por Lindsay, además de encontrar recetas novedosas y
+                            exquisitas, puedes encontrar datos de viajes, estilo de vida, casa, naternindad, mascotas y
+                            mucho más!</p>
 
                         <a href="https://pinchofyum.com/" class="botonreceta">Ver</a>
                     </div>
@@ -92,7 +101,9 @@
                 <div class="contenido_inspoinicio">
                     <img src="imagenes.html/RecipeGirl.jpg" alt="recipegirl.jpg">
                     <div class="contenido_inspoinicio_col">
-                        <p>Es un blog donde pueden encontrar más de 3000 novedosas recetas para cena, almuerzo, desayuno u hora del té. Además de las maravillosas fotos, cada receta incluye la información nutricional, lo que es muy útil!</p>
+                        <p>Es un blog donde pueden encontrar más de 3000 novedosas recetas para cena, almuerzo, desayuno
+                            u hora del té. Además de las maravillosas fotos, cada receta incluye la información
+                            nutricional, lo que es muy útil!</p>
 
                         <a href="imagenes.html/RecipeGirl.jpg" class="botonreceta">Ver</a>
                     </div>
