--- a/pages/recetasdulces.html
+++ b/pages/recetasdulces.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description"
+        content="Descubre las recetas de Margarita, con las que podrás deleitar a todos tus invitados a la hora de almuerzo, comida o a la hora del té.">
+    <meta name="keywords" content="COCINA, RECETAS Saladas, Recetas Dulces, ESTILO DE VIDA, MARGARITA NEELY, POSTRES">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/estilos.css">
     <title>Cocina de Margarita-Recetas Dulces</title>
@@ -92,10 +95,10 @@
 
             </div>
 
-     
-            </div>
 
-        </section>
+    </div>
+
+    </section>
     </div>
 
 
